Update Japanese opposite sex content
This commit updates the Japanese opposite sex content with the content
supplied from [1].

This is a straight replacement of existing content.

[1] https://docs.google.com/document/d/1NGu6MJhyREwGGRtZ_KeuJkYwyWq3zZ24P1eWx335EdI/edit

--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/japan/_opposite_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/japan/_opposite_sex.govspeak.erb
@@ -1,47 +1,64 @@
-Contact the relevant local authorities in Japan to find out about local marriage laws, including what documents you’ll need.
+## Before you start
 
-^You should [get legal advice](/government/publications/japan-list-of-lawyers) before making any plans.^
+Contact the relevant municipal office in Japan to find out about local laws, including what documents you’ll need.
 
-##What you need to do
+^Check the [travel advice for Japan](/foreign-travel-advice/japan) and get [legal advice](/government/collections/list-of-lawyers) before making any plans.^
 
-Make an appointment at the British embassy in Tokyo to swear an affirmation/affidavit (written statement of facts) that you’re free to marry.
+## Prove you’re free to get married
 
-[Make an appointment at the embassy in Tokyo](https://www.consular-appointments.service.gov.uk/fco/#!/british-embassy-tokyo/oaths-affirmations-and-affidavits/slot_picker).
+You and your partner need to go to the embassy in Tokyo to confirm that you’re legally allowed to get married. This is called swearing an affirmation or affidavit. Check with the municipal office how long you can use it to get married.
 
-You can [download and fill in a form](/government/publications/affidavitaffirmation-of-marital-status-japan) for an ‘Affirmation for marriage’ (non-religious) or an ‘Affidavit for marriage’ (religious) before your appointment. Don’t sign it - you’ll do that at the appointment.
+If your partner is also British, they’ll need to swear their own affirmation.
 
-You’ll need to bring:
+This costs <%= format_money calculator.consular_fee(:affidavit_or_affirmation_for_marriage) %> per person. You can pay in the [local currency](/government/publications/japan-consular-fees) with cash or card (Visa or Mastercard).
 
-- your UK passport
-- proof of residence showing your current address, such as a residence card
-- your [full birth certificate](/order-copy-birth-death-marriage-certificate/)
-- evidence of parental consent if you’re below the age you can legally get married without consent in the country you’re from (for example 18 in England and Wales)
-- evidence if you’ve changed your name (for example by deed poll)
+###Swearing an affirmation or affidavit
 
-If you or your partner have been divorced, widowed or previously in a civil partnership, you’ll also need whichever of the following documents is appropriate:
+s1. [Make an appointment at the embassy in Tokyo](https://www.consular-appointments.service.gov.uk/fco/#!/british-embassy-tokyo/oaths-affirmations-and-affidavits/service_list) to swear your affirmation or affidavit.
+s2. Download the [affirmation or affidavit](/government/publications/affidavitaffirmation-of-marital-status-japan).
+s3. Print it double-sided - it won’t be accepted otherwise.
+s4. Fill it in (in English) but don’t sign it - you need to sign it at the embassy.
 
-- a [decree absolute or final order](/copy-decree-absolute-final-order)
-- a civil partnership dissolution or annulment certificate
-- your (or your partner’s) former spouse or civil partner’s [death certificate](/order-copy-birth-death-marriage-certificate/)
+You also need to take:
 
-###What happens next
+- your passport
+- your full birth certificate (with your parents’ full names and your mother’s maiden name)
+- your residence card, if you live in Japan
+- your driving licence, a utility bill or bank statement, as proof of address
+- your naturalisation certificate, if you’re naturalised or registered as a British national
+- evidence if you’ve changed your name by deed poll
 
-The embassy will charge a fee for taking the oath, and then give you the completed affirmation/affidavit. You should take this to the local authorities where you’re getting married. You’ll need to bring your passport and full birth certificate.
+You can [order a copy of a birth, death or marriage certificate](/order-copy-birth-death-marriage-certificate).
 
-%The names on all documents you provide must appear exactly as they do on your passports - if not, the authorities may refuse to allow the marriage to go ahead. You may need to provide evidence if the name on your passport is different to your birth certificate (for example marriage certificate or deed poll).%
+If you don’t have your birth certificate at the embassy, you can take it to the municipal office where you’re going to get married.
 
-##Naturalisation of your partner if they move to the UK
+###If you’ve been married or in a civil partnership before
 
-Your partner can apply to [become a British citizen](/becoming-a-british-citizen/if-your-spouse-is-a-british-citizen) once they’ve lived in the UK for 3 years.
+You’ll need to take documentation to show the end of any previous marriages or civil partnerships. Depending on how it ended, this would be:
 
-## Fees
+- the original [decree absolute or final order](/copy-decree-absolute-final-order) (this could be a printed PDF and covering email from the court)
+- the annulment certificate
+- the civil partnership dissolution
+- your partner’s [death certificate](/order-copy-birth-death-marriage-certificate) and your  marriage certificate
 
-<%= render partial: 'consular_fees_table_items.govspeak.erb',
-           collection: calculator.services,
-           as: :service,
-           locals: { calculator: calculator } %>
+You can provide copies of a decree or death certificate instead of originals. They’ll need to be certified by a notary public or solicitor in the country where the divorce took place or the death was registered.
 
-You normally have to pay fees for consular services in the local currency - these are shown in the list of [consular fees for Japan](/government/publications/japan-consular-fees).
+If your divorce, civil partnership dissolution or annulment took place outside the UK, you’ll need evidence that you or your former partner lived in or were a national of that country at the time.
 
-<%=  render partial: 'how_to_pay.govspeak.erb',
-            locals: {calculator: calculator}%>
+If any of these documents are not in English or Japanese, you’ll need to bring an official English translation with the original. There’s a [list of English-speaking translators in Japan](/government/publications/japan-list-of-lawyers).
+
+##Get married
+
+To get married you need to:
+
+s1. Take your documents to the municipal office.
+s2. Fill in the ‘Kon-in Todoke’ (a request of registration of marriage).
+
+##After you get married
+
+You don’t need to register your marriage in the UK. It should be recognised in the UK if:
+
+- you followed the correct process according to the law in Japan
+- it would be [allowed under UK law](/marriages-civil-partnerships)
+
+If your partner isn’t British, they can apply to [become a British citizen](/becoming-a-british-citizen/if-your-spouse-is-a-british-citizen) once they’ve lived in the UK for 3 years.
