Replacing the anchor with hint
This commit fixes an error where markdown link disrupts the question
listing especially on the question that come after it.

The content design team have provided content for the hint.

--- a/lib/smart_answer_flows/simplified-expenses-checker/questions/is_vehicle_green.govspeak.erb
+++ b/lib/smart_answer_flows/simplified-expenses-checker/questions/is_vehicle_green.govspeak.erb
@@ -1,5 +1,9 @@
 <% content_for :title do %>
-  What are the car’s <a href="/get-vehicle-information-from-dvla">CO2 emissions</a>?
+  What are the car’s CO2 emissions?
+<% end %>
+
+<% content_for :hint do %>
+  Check your car's <a href="/get-vehicle-information-from-dvla">CO2 emissions</a>.
 <% end %>
 
 <% options(
