Minor content amendment
Alteration as requested in feedback from department following first
Factcheck.

--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/japan/_opposite_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/japan/_opposite_sex.govspeak.erb
@@ -30,7 +30,7 @@ You also need to take:
 
 You can [order a copy of a birth, death or marriage certificate](/order-copy-birth-death-marriage-certificate).
 
-If you don’t have your birth certificate at the embassy, you can take it to the municipal office where you’re going to get married.
+If you don’t have your birth certificate for your appointment at the embassy, you'll need to take it to the municipal office when you get married.
 
 ###If you’ve been married or in a civil partnership before
 
