--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/denmark/uk/partner_local/_same_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/denmark/uk/partner_local/_same_sex.govspeak.erb
@@ -16,7 +16,7 @@ If you can’t apply for one of these documents you can get a certificate of no 
 
 ###Document showing that you’re free to marry
 
-If you are in England or Wales, you can get a ‘no trace letter’ from the General Register Office. It can take up to 3 weeks for a ‘no trace letter’ to be issued. Ask them to make a search and quote reference ‘SEARCH 123’.
+If you are in England or Wales, you can get a ‘no trace letter’ from the General Register Office. ‘No trace letters’ cost £50 and can take up to 3 weeks to be issued. Ask them to make a search and quote reference ‘SEARCH 123’.
 
 $C
 **General Register Office**\\
