--- a/lib/smart_answer_flows/student-finance-calculator/outcomes/outcome_uk_all_students.govspeak.erb
+++ b/lib/smart_answer_flows/student-finance-calculator/outcomes/outcome_uk_all_students.govspeak.erb
@@ -5,7 +5,7 @@
 
   You could get per year:
 
-  - <%= number_to_currency(tuition_fee_amount, precision: 0) %> [Tuition Fee Loan](/student-finance/parttime-students)
+  - <%= format_money(tuition_fee_amount, pounds_only: true) %> [Tuition Fee Loan](/student-finance/parttime-students)
 
   ###Extra student funding
 
