--- a/lib/smart_answer_flows/student-finance-calculator/outcomes/outcome_uk_full_time_dental_medical_students.govspeak.erb
+++ b/lib/smart_answer_flows/student-finance-calculator/outcomes/outcome_uk_full_time_dental_medical_students.govspeak.erb
@@ -10,7 +10,7 @@
   <%= render partial: 'full_time_tuition.govspeak.erb', locals: { tuition_fee_amount: tuition_fee_amount, maintenance_loan_amount: maintenance_loan_amount, maintenance_grant_amount: maintenance_grant_amount, start_date: start_date } %>
 
   <% if uk_ft_circumstances.include?('children-under-17') %>
-    - up to <%= number_to_currency(calculator.childcare_grant_one_child, precision: 2) %> a week (1 child) or up to <%= number_to_currency(calculator.childcare_grant_more_than_one_child, precision: 2) %> a week (2 or more children) [Childcare Grant](/childcare-grant)
+    - up to <%= format_money(calculator.childcare_grant_one_child) %> a week (1 child) or up to <%= format_money(calculator.childcare_grant_more_than_one_child) %> a week (2 or more children) [Childcare Grant](/childcare-grant)
     - up to <%= format_money(calculator.parent_learning_allowance) %> per year [Parents’ Learning Allowance](/parents-learning-allowance)
   <% end %>
 
@@ -22,7 +22,7 @@
     - [Disabled Students' Allowances](/disabled-students-allowances-dsas)
   <% end %>
 
-  In your fifth and sixth years, you could get <%= number_to_currency(calculator.reduced_maintenance_loan_for_healthcare, precision: 0) %> reduced Maintenance Loan. You can also apply for [NHS funding](/nhs-bursaries) and get the following depending on your circumstances:
+  In your fifth and sixth years, you could get <%= format_money(calculator.reduced_maintenance_loan_for_healthcare, pounds_only: true) %> reduced Maintenance Loan. You can also apply for [NHS funding](/nhs-bursaries) and get the following depending on your circumstances:
 
   <%= render partial: 'nhs_full_time_funding.govspeak.erb', locals: { uk_ft_circumstances: uk_ft_circumstances, calculator: calculator } %>
 
@@ -34,7 +34,7 @@
     ##If you're studying another eligible healthcare course
   <% end %>
 
-  Each year you could get <%= number_to_currency(calculator.reduced_maintenance_loan_for_healthcare, precision: 0) %> reduced Maintenance Loan. You can also apply for [NHS funding](/nhs-bursaries) and get the following depending on your circumstances:
+  Each year you could get <%= format_money(calculator.reduced_maintenance_loan_for_healthcare, pounds_only: true) %> reduced Maintenance Loan. You can also apply for [NHS funding](/nhs-bursaries) and get the following depending on your circumstances:
 
   <%= render partial: 'nhs_full_time_funding.govspeak.erb', locals: { uk_ft_circumstances: uk_ft_circumstances, calculator: calculator } %>
 
