--- a/lib/smart_answer_flows/student-finance-calculator/outcomes/outcome_uk_full_time_students.govspeak.erb
+++ b/lib/smart_answer_flows/student-finance-calculator/outcomes/outcome_uk_full_time_students.govspeak.erb
@@ -17,7 +17,7 @@
     You could get:
 
     <% if uk_ft_circumstances.include?('children-under-17') %>
-      - up to <%= number_to_currency(calculator.childcare_grant_one_child, precision: 2) %> a week (1 child) or up to <%= number_to_currency(calculator.childcare_grant_more_than_one_child, precision: 2) %> a week (2 or more children) [Childcare Grant](/childcare-grant)
+      - up to <%= format_money(calculator.childcare_grant_one_child) %> a week (1 child) or up to <%= format_money(calculator.childcare_grant_more_than_one_child) %> a week (2 or more children) [Childcare Grant](/childcare-grant)
       - up to <%= format_money(calculator.parent_learning_allowance) %> per year [Parents’ Learning Allowance](/parents-learning-allowance)
       - [Child Tax Credit](/child-tax-credit)
     <% end %>
