--- a/lib/smart_answer_flows/benefit-cap-calculator/outcomes/outcome_affected_greater_than_cap_national.govspeak.erb
+++ b/lib/smart_answer_flows/benefit-cap-calculator/outcomes/outcome_affected_greater_than_cap_national.govspeak.erb
@@ -32,7 +32,7 @@
   New Housing Benefit amount: <%= format_money(new_housing_benefit) %>
 
   <% if new_housing_benefit_amount < 0.5 %>
-    Your Housing Benefit won’t be reduced to less than £0.50. You need to be getting some Housing Benefit to be eligible for other services.
+    Your Housing Benefit won’t be reduced to less than 50p. You need to be getting some Housing Benefit to be eligible for other services.
   <% end %>
 
   This is an estimate only. Contact the Department for Work and Pensions if you need further help.
