--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/british-indian-ocean-territory/ceremony_country/partner_british/_opposite_sex.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/british-indian-ocean-territory/ceremony_country/partner_british/_opposite_sex.erb
@@ -1,8 +1,8 @@
-Access to the British Indian Ocean Territory is restricted, and it’s unlikely that marriage would be allowed there.
+There is no British Embassy in the British Indian Ocean Territory.
 
-Contact the British Indian Ocean Territory Administration for further details.
+Access to the British Indian Ocean Territory is restricted.
 
-No embassy details found
+[Contact the British Indian Ocean Territory Administration](http://biot.gov.io/) for further details. 
 
 
 
