BIOT - user UK - partner British - same sex
Updated content to make it consistent across opposite and same sex outcomes.

--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/british-indian-ocean-territory/uk/partner_british/_same_sex.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/british-indian-ocean-territory/uk/partner_british/_same_sex.erb
@@ -1,4 +1,5 @@
-It’s not possible to get legal recognition for your same-sex relationship in British Indian Ocean Territory.
+There is no British Embassy in the British Indian Ocean Territory.
 
+Access to the British Indian Ocean Territory is restricted.
 
-
+[Contact the British Indian Ocean Territory Administration](http://biot.gov.io/) for further details.
