Japan - opposite sex
Removed reference to partner needing to go to the embassy.

--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/japan/_opposite_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/japan/_opposite_sex.govspeak.erb
@@ -6,7 +6,7 @@ Contact the relevant municipal office in Japan to find out about local laws, inc
 
 ## Prove you’re free to get married
 
-You and your partner need to go to the embassy in Tokyo to confirm that you’re legally allowed to get married. This is called swearing an affirmation or affidavit. Check with the municipal office how long you can use it to get married.
+You need to go to the embassy in Tokyo to confirm that you’re legally allowed to get married. This is called swearing an affirmation or affidavit. Check with the municipal office how long you can use it to get married.
 
 If your partner is also British, they’ll need to swear their own affirmation.
 
