User Kenyan partner local opposite sex
Added in price for no trace letter

--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/kenya/ceremony_country/partner_local/_opposite_sex.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/kenya/ceremony_country/partner_local/_opposite_sex.erb
@@ -10,7 +10,7 @@ The British High Commission can provide a letter confirming this which you can g
 
 The Kenyan authorities may also ask you to provide a sworn affidavit before a local lawyer, about your marital status. If you have been married before you will need to provide a divorce decree absolute to the Kenyan authorities.
 
-If you have previously lived in the UK you may be asked for a no trace letter issued by the General Register Office.  A no trace letter can be obtained from the General Register Office by calling +44 (0)300 123 1837 (Monday to Friday, 8am to 8pm). You should ask for a search to be made and quote the reference number "SEARCH 123".
+If you have previously lived in the UK you may be asked for a no trace letter issued by the General Register Office.  A no trace letter costs £50 and can be obtained from the General Register Office by calling +44 (0)300 123 1837 (Monday to Friday, 8am to 8pm). You should ask for a search to be made and quote the reference number "SEARCH 123".
 
 ##Naturalisation of your partner if they move to the UK
 
