--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/ireland/_title.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/ireland/_title.govspeak.erb
@@ -1,5 +1,5 @@
 <% if calculator.partner_is_same_sex? %>
-    Civil partnership in Ireland
+    Marriage in Ireland
 <% else %>
     Marriage in Ireland
 <% end %>
