--- a/lib/smart_answer_flows/maternity-paternity-calculator/questions/date_of_adoption_placement.govspeak.erb
+++ b/lib/smart_answer_flows/maternity-paternity-calculator/questions/date_of_adoption_placement.govspeak.erb
@@ -1,9 +1,9 @@
 <% content_for :title do %>
-  When will the child be placed with the employee?
-<% end %>
-
-<% content_for :hint do %>
-  For overseas adoptions enter the date of arrival in the UK.
+  <% if adoption_is_from_abroad %>
+    When will the child arrive in the UK?
+  <% else %>
+    When will the child be placed with the employee?
+  <% end %>
 <% end %>
 
 <% content_for :error_message do %>
