Update copy and validation for children being adopted from abroad
We currently have a number of questions which have hint text indicating
what to do in the case of adopting a child from overseas. We now have
a question that clarifies this, so we can directly ask these questions
knowing if the child is coming from abroad or not.

This change also updates the earliest and latest dates that leave can
start when the child is being adopted from overseas.

--- a/lib/smart_answer_flows/maternity-paternity-calculator/questions/date_of_adoption_match.govspeak.erb
+++ b/lib/smart_answer_flows/maternity-paternity-calculator/questions/date_of_adoption_match.govspeak.erb
@@ -1,7 +1,13 @@
 <% content_for :title do %>
-  When was the child matched with the employee?
+  <% if adoption_is_from_overseas %>
+    When did you get permission to adopt?
+  <% else %>
+    When was the child matched with the employee?
+  <% end %>
 <% end %>
 
-<% content_for :hint do %>
-  For overseas adoptions, enter the official notification date (the permission to adopt from abroad).
+<% if adoption_is_from_overseas %>
+  <% content_for :hint do %>
+    Enter the official notification date.
+  <% end %>
 <% end %>
