--- a/lib/smart_answer_flows/marriage-abroad/outcomes/outcome_same_sex_marriage_and_civil_partnership.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/outcome_same_sex_marriage_and_civil_partnership.govspeak.erb
@@ -10,19 +10,7 @@
 <% content_for :body do %>
   <% case calculator.marriage_and_partnership_phrases %>
   <% when 'ss_marriage' %>
-    <% if calculator.ceremony_country == 'australia' %>
-      You may be able to get married at the British High Commission or a British consulate in Australia.
-
-      Before you can get married you need to give notice of your intention to marry.
-
-      You and your partner must have lived in Australia for at least 7 full days before you give notice.
-
-      If you and your partner don’t normally live in Australia, there must be 14 full days between the date you give notice and the date you marry. You need to stay in Australia for the 14 days.
-
-      Book an appointment to give notice at:
-    <% else %>
-      You may be able to get married at the British embassy or consulate in <%= calculator.country_name_lowercase_prefix %>.
-    <% end %>
+    You may be able to get married at the British embassy or consulate in <%= calculator.country_name_lowercase_prefix %>.
   <% when 'ss_marriage_and_partnership' %>
     You may be able to register a civil partnership or get married at the British embassy or consulate in <%= calculator.country_name_lowercase_prefix %>.
   <% end %>
@@ -39,14 +27,8 @@
 
   <% end %>
 
-  <% if calculator.ceremony_country == 'australia' %>
-    ##What documents you’ll need
-
-    The consular officer will talk to you about the documents you need when they confirm your appointment to give notice. 
-  <% else %>
-    <%= render partial: 'documents_needed_21_days_residency.govspeak.erb',
-         locals: { calculator: calculator } %>
-  <% end %>
+  <%= render partial: 'documents_needed_21_days_residency.govspeak.erb',
+      locals: { calculator: calculator } %>
 
   <% if calculator.partner_british? %>
     <%= render partial: 'documents_needed_ss_british.govspeak.erb' %>
@@ -90,16 +72,6 @@
   <%= render partial: 'pay_for_ss_registration_and_certificate.govspeak.erb',
              locals: { calculator: calculator } %>
 
-  <% if calculator.ceremony_country == 'australia' %>
-    You can’t have a same-sex marriage in a British <%= calculator.diplomatic_mission %> or consulate if you’re already in one of these relationships:
-
-    * civil partnership (Australian Capital Territory)
-    * relationship registered under the Relationships Register Act 2010 (New South Wales)
-    * civil partnership (Queensland)
-    * significant relationship (Tasmania)
-    * registered domestic relationship (Victoria)
-
-  <% end %>
   ^All same-sex marriages must take place under English and Welsh or Scottish law even if you live in or are from Northern Ireland. Tell the <%= calculator.diplomatic_mission %> or consulate which law you want to get married under at your appointment.^
 
   <%= render partial: 'partner_naturalisation_in_uk.govspeak.erb' %>
@@ -107,7 +79,7 @@
   <%= render partial: 'services_and_fees.govspeak.erb',
              locals: { calculator: calculator } %>
 
-  <% if %w{albania australia russia serbia vietnam}.include?(calculator.ceremony_country) %>
+  <% if %w{albania russia serbia vietnam}.include?(calculator.ceremony_country) %>
 
   <%= render partial: 'convert_cc_to_ss_marriage.govspeak.erb' %>
   <% end %>
