--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/spain/uk/_opposite_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/spain/uk/_opposite_sex.govspeak.erb
@@ -13,14 +13,16 @@ The civil registry office will ask for one or both of:
 - a [certificate of no impediment (CNI)](/government/publications/example-certificate-of-no-impediment-cni)
 - a [marital status certificate](/government/publications/marital-status-example)
 
-If your partner is British they'll need the same certificates. If they're not British they'll need equivalent documents from their local authorities.
+Show these example certificates to the civil registry where you’re getting married and ask them which you need.
 
-^ Apply for all your certificates at least 3 months before you get married. You need to present all your paperwork when you open the marriage application at the civil registry office.
+If your partner is British they'll need to make a separate application to the consulate with the same certificates. If they're not British they'll need equivalent documents from their local authorities.
 
-The civil registry office will also ask you for proof of your address. This should be:
+^ Apply for all your certificates at least 3 months before you take your documents to the civil registry appointment. You need to present all your paperwork when you open the marriage application at the civil registry office.
+
+The civil registry office will also ask you for proof of your address. This could be:
 
 - a utility bill or bank statement - if you don't live in Spain
-- your registration certificate from the town hall ('ayuntamiento') - if you live in Spain
+- your registration certificate (‘padrón’) from the town hall ('ayuntamiento') - if you live in Spain
 
 If you've lived in Spain for less than 2 years, you might also need to provide the ['communication proof of address'](/government/publications/communication-regarding-proof-of-address-spain).
 
@@ -42,7 +44,7 @@ The consulate will issue your CNI and send it to you with your original document
 
 ^Your new CNI will be valid for 3 months from when your original CNI was issued.^
 
-It costs <%= format_money calculator.consular_fee(:receiving_notice_of_marriage) %> to give notice and <%= format_money calculator.consular_fee(:issuing_cni_or_nulla_osta) %> for the CNI. You'll need to pay in the [local currency](/government/publications/spain-consular-fees) or by card. Fill in the payment form in the pack.
+It costs <%= format_money calculator.consular_fee(:receiving_notice_of_marriage) %> to give notice and <%= format_money calculator.consular_fee(:issuing_cni_or_nulla_osta) %> for the CNI. You'll need to pay in the [local currency](/government/publications/spain-consular-fees) by card. Fill in the payment form in the pack.
 
 
 ### Get a marital status certificate ('certificado de estado civil/soltería')
@@ -57,19 +59,19 @@ The consulate will send your certificate and original documents to you by regist
 
 ## Get married
 
-You can have a civil wedding or a Catholic wedding.
+You can have a civil wedding or a religious wedding.
 
-Other religious ceremonies aren't valid on their own. You'll need to have a civil wedding as well.
+Religious ceremonies aren't valid on their own. You'll need to have a civil wedding as well.
 
 ### Civil weddings
 
 Take your certificates to the civil registry office where you're planning to get married. The registrar will check your documents and set a date for your wedding.
 
-### Catholic weddings
+### Religious weddings
 
 Take your certificates to the priest who's going to marry you. The priest will check your documents and set a date for your wedding.
 
-^After your ceremony the priest must register your marriage at the local civil registry office. You won't be legally married until this has happened.^
+^After your ceremony either you or the priest must register your marriage at the local civil registry office. You won't be legally married until this has happened.^
 
 
 ## After you get married
@@ -79,7 +81,7 @@ Your marriage will be recognised in the UK if:
 - you follow the correct process according to the law in Spain
 - it would be [allowed under UK law](/marriages-civil-partnerships)
 
-You won't need to register your marriage in the UK.
+You don't need to register your marriage in the UK.
 
 If your partner isn't a British citizen, they can apply for [British citizenship](/becoming-a-british-citizen/if-your-spouse-is-a-british-citizen) once they've lived in the UK for 3 years.
 
