--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/spain/uk/_same_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/spain/uk/_same_sex.govspeak.erb
@@ -13,14 +13,16 @@ The civil registry office will ask for one or both of:
 - a [certificate of no impediment (CNI)](/government/publications/example-certificate-of-no-impediment-cni)
 - a [marital status certificate](/government/publications/marital-status-example)
 
-If your partner is British they'll need the same certificates. If they're not British they'll need equivalent documents from their local authorities.
+Show these example certificates to the civil registry where you’re getting married and ask them which you need.
 
-^ Apply for all your certificates at least 3 months before you get married. You need to present all your paperwork when you open the marriage application at the civil registry office.
+If your partner is British they'll need to make a separate application to the consulate with the same certificates. If they're not British they'll need equivalent documents from their local authorities.
 
-The civil registry office will also ask you for proof of your address. This should be:
+^ Apply for all your certificates at least 3 months before you take your documents to the civil registry appointment. You need to present all your paperwork when you open the marriage application at the civil registry office.
+
+The civil registry office will also ask you for proof of your address. This could be:
 
 - a utility bill or bank statement - if you don't live in Spain
-- your registration certificate from the town hall ('ayuntamiento') - if you live in Spain
+- your registration certificate (‘padrón’) from the town hall ('ayuntamiento') - if you live in Spain
 
 If you've lived in Spain for less than 2 years, you might also need to provide the ['communication proof of address'](/government/publications/communication-regarding-proof-of-address-spain).
 
@@ -38,11 +40,11 @@ You must download and fill in the [CNI application pack](/government/publication
 
 Send the form and documents by registered post to the address in the application pack.
 
-The consulate will issue your CNI and send it to you with your original documents by registered post. You'll usually get your CNI 30 working days after the consulate receives your form and documents.
+The consulate will issue your CNI and send it to you with your original documents by courier. You'll usually get your CNI 30 working days after the consulate receives your form and documents.
 
 ^Your new CNI will be valid for 3 months from when your original CNI was issued.^
 
-It costs <%= format_money calculator.consular_fee(:receiving_notice_of_marriage) %> to give notice and <%= format_money calculator.consular_fee(:issuing_cni_or_nulla_osta) %> for the CNI. You'll need to pay in the [local currency](/government/publications/spain-consular-fees) or by card. Fill in the payment form in the pack.
+It costs <%= format_money calculator.consular_fee(:receiving_notice_of_marriage) %> to give notice and <%= format_money calculator.consular_fee(:issuing_cni_or_nulla_osta) %> for the CNI. You'll need to pay in the [local currency](/government/publications/spain-consular-fees) by card. Fill in the payment form in the pack.
 
 ### Get a marital status certificate ('certificado de estado civil/soltería')
 
@@ -52,7 +54,7 @@ You must sign the affirmation in the application pack in front of a local [notar
 
 Send the form and documents by registered post to the address in the application pack.
 
-The consulate will send your certificate and original documents to you by registered post. You'll usually get your certificate 30 working days after the consulate receives your form and documents.
+The consulate will send your certificate and original documents to you by courier. You'll usually get your certificate 30 working days after the consulate receives your form and documents.
 
 ## Get married
 
@@ -67,7 +69,7 @@ Your marriage will be recognised in the UK if:
 - you followed the correct process according to the law in Spain
 - it would be [allowed under UK law](/marriages-civil-partnerships)
 
-You won't need to register your marriage in the UK.
+It's not possible to register your marriage in the UK.
 
 If your partner isn't a British citizen, they can apply for [British citizenship](/becoming-a-british-citizen/if-your-spouse-is-a-british-citizen) once they've lived in the UK for 3 years.
 
