User in Uk - opposite sex
Changes from FCO

--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/spain/uk/_opposite_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/spain/uk/_opposite_sex.govspeak.erb
@@ -38,24 +38,23 @@ Your notice will be publicly displayed in the register office for 28 days. You c
 
 You must download and fill in the [CNI application pack](/government/publications/uk-cni-pack) to exchange your UK-issued CNI for one that's valid in Spain. The pack contains a list of the documents you'll need.
 
-Send the form and documents by registered post to the address in the application pack.
+Send the form and documents by courier to the address in the application pack.
 
-The consulate will issue your CNI and send it to you with your original documents by registered post. You'll usually get your CNI 30 working days after the consulate receives your form and documents.
+The consulate will issue your CNI and send it to you with your original documents by courier. You'll usually get your CNI 30 working days after the consulate receives your form and documents.
 
 ^Your new CNI will be valid for 3 months from when your original CNI was issued.^
 
 It costs <%= format_money calculator.consular_fee(:receiving_notice_of_marriage) %> to give notice and <%= format_money calculator.consular_fee(:issuing_cni_or_nulla_osta) %> for the CNI. You'll need to pay in the [local currency](/government/publications/spain-consular-fees) by card. Fill in the payment form in the pack.
 
-
 ### Get a marital status certificate ('certificado de estado civil/soltería')
 
-Download and fill in the [marital status certificate application pack](/government/publications/marital-status-certificate-for-marriage-application-pack) - it contains a list of the documents you'll need. The certificate costs <%= format_money calculator.consular_fee(:affidavit_or_affirmation_for_marriage) %>.
+Download and fill in the [marital status certificate application pack](/government/publications/marital-status-certificate-for-marriage-application-pack) - it contains a list of the documents you'll need. The certificate costs <%= format_money calculator.consular_fee(:affidavit_or_affirmation_for_marriage) %>. You’ll need to pay in the [local currency](/government/publications/spain-consular-fees) by card. Fill in the payment form in the pack.
 
 You must sign the affirmation in the application pack in front of a local [notary public](http://www.notaries-directory.eu/) in Spain. They'll charge you a fee.
 
-Send the form and documents by registered post to the address in the application pack.
+Send the form and documents by courier to the address in the application pack.
 
-The consulate will send your certificate and original documents to you by registered post. You'll usually get your certificate 30 working days after the consulate receives your form and documents.
+The consulate will send your certificate and original documents to you by courier. You'll usually get your certificate 30 working days after the consulate receives your form and documents.
 
 ## Get married
 
@@ -81,7 +80,7 @@ Your marriage will be recognised in the UK if:
 - you follow the correct process according to the law in Spain
 - it would be [allowed under UK law](/marriages-civil-partnerships)
 
-You don't need to register your marriage in the UK.
+It's not possible to register your marriage in the UK.
 
 If your partner isn't a British citizen, they can apply for [British citizenship](/becoming-a-british-citizen/if-your-spouse-is-a-british-citizen) once they've lived in the UK for 3 years.
 
