--- a/lib/smart_answer_flows/marriage-abroad/outcomes/outcome_opposite_sex_marriage_in_consular_cni_countries_when_residing_in_ceremony_country.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/outcome_opposite_sex_marriage_in_consular_cni_countries_when_residing_in_ceremony_country.govspeak.erb
@@ -20,7 +20,12 @@
   <%= render partial: 'what_you_need_to_do.govspeak.erb',
       locals: { calculator: calculator } %>
 
-  <% if %w(montenegro kuwait).include?(calculator.ceremony_country) %>
+  <% if calculator.ceremony_country == 'croatia' %>
+    You'll be asked to provide a certificate of no impediment (CNI) to prove you’re allowed to marry.
+
+    The local registrar may also need a certificate of custom and law, which confirms the marriage is valid - the Embassy in Zagreb can provide this.
+
+  <% elsif %w(montenegro kuwait).include?(calculator.ceremony_country) %>
     You’ll be asked to provide a certificate of no impediment (CNI) to prove you’re allowed to marry. Contact the local notary public to check if you need a CNI.
 
   <% elsif calculator.opposite_sex_21_days_residency_required? %>
@@ -33,7 +38,18 @@
 
   <% end %>
 
-  <% if calculator.ceremony_country == 'nicaragua' %>
+  <% if calculator.ceremony_country == 'croatia' %>
+
+    ###Applying for a CNI from the <%= calculator.embassy_or_consulate_ceremony_country %>
+
+    <%= render partial: "three_day_residency_requirement.govspeak.erb",
+               locals: {
+                 country_name_lowercase_prefix: calculator.country_name_lowercase_prefix
+               } %>
+
+    You can then book an appointment at the embassy to give notice of your marriage. There’s a fee for this service (read the table on this page).
+
+  <% elsif calculator.ceremony_country == 'nicaragua' %>
     If you need a CNI, you must arrange this through the British Embassy in Costa Rica because there aren’t any British consular facilities in Nicaragua.
 
 
@@ -43,7 +59,7 @@
 
   <% end %>
 
-  <% if %w(russia).exclude?(calculator.ceremony_country) && calculator.three_day_residency_requirement_applies? %>
+  <% if %w(croatia russia).exclude?(calculator.ceremony_country) && calculator.three_day_residency_requirement_applies? %>
     <%= render partial: "three_day_residency_requirement.govspeak.erb",
                locals: {
                  country_name_lowercase_prefix: calculator.country_name_lowercase_prefix
