--- a/lib/smart_answer_flows/benefit-cap-calculator/outcomes/outcome_affected_greater_than_cap_london.govspeak.erb
+++ b/lib/smart_answer_flows/benefit-cap-calculator/outcomes/outcome_affected_greater_than_cap_london.govspeak.erb
@@ -1,5 +1,5 @@
 <% content_for :title do %>
-  Based on your answers, you will be affected by the Greater London benefit cap.
+  Based on your answers, you will be affected by the benefit cap.
 
 <% end %>
 
