Removed text for test

--- a/lib/smart_answer_flows/benefit-cap-calculator/outcomes/outcome_not_affected_exemptions.govspeak.erb
+++ b/lib/smart_answer_flows/benefit-cap-calculator/outcomes/outcome_not_affected_exemptions.govspeak.erb
@@ -1,9 +1,9 @@
 <% content_for :title do %>
-  Based on your answers, you’re not affected by the benefit cap.
+  Based on your answers, you are not affected by the benefit cap.
 <% end %>
 
 <% content_for :body do %>
-  These benefits are exempt from the new benefit cap:
+  These benefits are exempt from the benefit cap:
 
 - Working Tax Credit
   <% exempt_benefits_descriptions.each do |exempt_benefit| %>
