Amend Croatia marriage outcome after fact check

--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/croatia/_same_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/croatia/_same_sex.govspeak.erb
@@ -15,7 +15,7 @@ You can get a CNI from your local register office in the UK or from the British 
 
 ###Get a CNI if you’re in the UK
 
-You’ll need to get a CNI and a statutory declaration if you’re in the UK.
+You’ll need to get a CNI if you’re in the UK.
 
 To get a CNI, make an appointment at your [local register office](/register-offices) to give notice of your civil partnership. A CNI costs <%= format_money calculator.consular_fee(:issuing_cni_or_nulla_osta) %>.
 
@@ -62,7 +62,7 @@ You can pay by cash in the local currency or card.
 
 ##Your civil partnership ceremony
 
-You’ll need to give your CNI and certificate of custom law to the registrar who’ll be conducting your civil partnership.  
+You’ll need to give your CNI to the registrar who’ll be conducting your civil partnership.
 
 ##After your civil partnership ceremony
 
@@ -73,7 +73,7 @@ Your civil partnership will be recognised in the UK if:
 
 You won’t need to register it in the UK.
 
-If you need extra copies of your civil partnership certificate you can apply for it at your local registry office.
+If you need extra copies of your civil partnership certificate you can apply for them at the register office where the civil partnership took place.
 
 If your partner isn’t a British citizen, they can apply for [British citizenship](/becoming-a-british-citizen/if-your-spouse-is-a-british-citizen) once they’ve lived in the UK for 3 years.
 
