Changed dates in state pension example and removed reference to Bereavement Payment

--- a/lib/smart_answer_flows/state-pension-through-partner/outcomes/married_woman_and_state_pension_outcome.govspeak.erb
+++ b/lib/smart_answer_flows/state-pension-through-partner/outcomes/married_woman_and_state_pension_outcome.govspeak.erb
@@ -16,11 +16,11 @@
 
   **Example**
 
-  You’ll reach State Pension age on 6 March 2018. This is in the tax year 6 April 2017 to 5 April 2018.
+  You’ll reach State Pension age on 6 March 2020. This is in the tax year 6 April 2019 to 5 April 2020.
 
   You got married in 1975 and chose to pay National Insurance contributions at a reduced rate.
 
-  Your State Pension will be worked out differently if your reduced rate election still applied to you in 1982.
+  Your State Pension will be worked out differently if your reduced rate election still applied to you in 1984.
 
   $E
 
@@ -83,7 +83,7 @@
 
   You might be eligible for a [Bereavement Support Payment](/bereavement-support-payment) if you haven’t yet reached State Pension age and your partner died on or after 6 April 2017.
 
-  If your spouse or civil partner died before 6 April 2017, you may be eligible for [Bereavement Payment](/bereavement-payment), [Widowed Parent’s Allowance](/widowed-parents-allowance) or [Bereavement Allowance](/bereavement-allowance).
+  If your spouse or civil partner died before 6 April 2017, you may be eligible for [Widowed Parent’s Allowance](/widowed-parents-allowance) or [Bereavement Allowance](/bereavement-allowance).
 
 
  
