2018/2019 uprating for pay-leave-for-parents
Statutory pay goes from £140.98 to £145.18.

--- a/lib/smart_answer_flows/pay-leave-for-parents/outcomes/_both_shared_pay.govspeak.erb
+++ b/lib/smart_answer_flows/pay-leave-for-parents/outcomes/_both_shared_pay.govspeak.erb
@@ -28,6 +28,12 @@ Mother’s shared parental pay (between 6 April 2017 and 5 April 2018) | £140.9
 
 <% end %>
 
+<% if calculator.paid_leave_is_in_tax_year?(2018) %>
+
+Mother’s shared parental pay (between 6 April 2018 and 5 April 2019) | £145.18 per week or 90% of their average weekly earnings (before tax), whichever is lower
+
+<% end %>
+
 <% if calculator.paid_leave_is_in_tax_year?(2014) %>
 
 Partner's shared parental pay (between 6 April 2014 and 5 April 2015) | £138.18 per week or 90% of their average weekly earnings (before tax), whichever is lower
@@ -49,5 +55,11 @@ Partner's shared parental pay (between 6 April 2016 and 5 April 2017) | £139.58
 <% if calculator.paid_leave_is_in_tax_year?(2017) %>
 
 Partner's shared parental pay (between 6 April 2017 and 5 April 2018) | £140.98 per week or 90% of their average weekly earnings (before tax), whichever is lower
+
+<% end %>
+
+<% if calculator.paid_leave_is_in_tax_year?(2018) %>
+
+Partner's shared parental pay (between 6 April 2018 and 5 April 2019) | £145.18 per week or 90% of their average weekly earnings (before tax), whichever is lower
 
 <% end %>
