--- a/lib/smart_answer_flows/pay-leave-for-parents/outcomes/_mat_shared_pay.govspeak.erb
+++ b/lib/smart_answer_flows/pay-leave-for-parents/outcomes/_mat_shared_pay.govspeak.erb
@@ -27,3 +27,9 @@ Shared Parental Pay (between 6 April 2016 and 5 April 2017) | £139.58 per week 
 Shared Parental Pay (between 6 April 2017 and 5 April 2018) | £140.98 per week or 90% of their average weekly earnings (before tax), whichever is lower
 
 <% end %>
+
+<% if calculator.paid_leave_is_in_tax_year?(2018) %>
+
+Shared Parental Pay (between 6 April 2018 and 5 April 2019) | £145.18 per week or 90% of their average weekly earnings (before tax), whichever is lower
+
+<% end %>
