--- a/lib/smart_answer_flows/pay-leave-for-parents/outcomes/_additional_pat_pay.govspeak.erb
+++ b/lib/smart_answer_flows/pay-leave-for-parents/outcomes/_additional_pat_pay.govspeak.erb
@@ -33,3 +33,9 @@ Weekly rate (between 6 April 2016 and 5 April 2017) | £139.58, or 90% of their 
 Weekly rate (between 6 April 2017 and 5 April 2018) | £140.98, or 90% of their average weekly earnings (whichever is lower).
 
 <% end %>
+
+<% if calculator.paid_leave_is_in_tax_year?(2018) %>
+
+Weekly rate (between 6 April 2018 and 5 April 2019) | £145.18, or 90% of their average weekly earnings (whichever is lower).
+
+<% end %>
