--- a/lib/smart_answer_flows/pay-leave-for-parents/outcomes/_mat_allowance.govspeak.erb
+++ b/lib/smart_answer_flows/pay-leave-for-parents/outcomes/_mat_allowance.govspeak.erb
@@ -38,4 +38,10 @@ Weekly rate (between 6 April 2017 and 5 April 2018) | £140.98, or 90% of her av
 
 <% end %>
 
+<% if calculator.paid_leave_is_in_tax_year?(2018) %>
+
+Weekly rate (between 6 April 2018 and 5 April 2019) | £145.18, or 90% of her average weekly earnings (whichever is lower)
+
+<% end %>
+
 The mother can claim maternity allowance as soon as she’s been pregnant for 26 weeks. She won’t have to pay tax on it.
