User UK, partner British, same sex
Same sex marriage now available under German law. 
Consular marriages therefore aren’t advised anymore.

--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/germany/uk/partner_british/_same_sex.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/germany/uk/partner_british/_same_sex.erb
@@ -1,6 +1,6 @@
 ##Before you start
 
-Contact the Civil Registry Office ‘Standesamt’ or church where you plan to marry to find out about local marriage laws.
+Contact the Civil Registry Office (‘Standesamt’) or church where you plan to marry to find out about local marriage laws.
 
 You must have a consultation with a Standesamt before making any further arrangements. They’ll let you know about the procedure and which documents you’ll need.  If one of you does not speak German, you’ll also need to bring a [qualified interpreter](https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/420647/translators_interpreters_germany.pdf) to your appointment.
 
