Text updates to content

--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/south-korea/_same_sex.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/south-korea/_same_sex.erb
@@ -1,6 +1,6 @@
 ##Before you start
 
-You can get married at the British Embassy in Seoul if you are marrying someone who is not a national of South Korea.
+You can get married at the British Embassy in Seoul if you are marrying someone who is not a national of Korea.
 
 ##Prove you’re free to get married
 
