--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/south-korea/_opposite_sex.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/south-korea/_opposite_sex.erb
@@ -1,4 +1,4 @@
-Contact the [Embassy of South Korea](/government/publications/foreign-embassies-in-the-uk) before making any plans to find out about local marriage laws, including what documents you’ll need.
+Contact the local relevant marriage authorities before making any plans to find out about local marriage laws, including what documents you’ll need.
 
 ^You should [get legal advice](/government/collections/list-of-lawyers) and check the [travel advice for South Korea](/foreign-travel-advice/south-korea) before making any plans.^
 
