Tourism text option for purpose of visit options
This allows the tourism value for purpose of visit to be "Tourism" for
"What are you coming to the UK to do?" and be "Tourism, including
visiting friends or family" for "What are you coming to the Channel Islands
or Isle of Man to do?" - as at this point in time we're not aware of
this requiring an edit.

--- a/lib/smart_answer_flows/check-uk-visa/questions/channel_islands_or_isle_of_man.govspeak.erb
+++ b/lib/smart_answer_flows/check-uk-visa/questions/channel_islands_or_isle_of_man.govspeak.erb
@@ -16,4 +16,4 @@
   <% end %>
 <% end %>
 
-<%= render partial: 'purpose_of_visit_options.govspeak.erb' %>
+<%= render partial: 'purpose_of_visit_options.govspeak.erb', locals: { tourism_friends_family: true } %>
