Update copy for a couple of questions

--- a/lib/smart_answer_flows/check-uk-visa/questions/partner_family_british_citizen.govspeak.erb
+++ b/lib/smart_answer_flows/check-uk-visa/questions/partner_family_british_citizen.govspeak.erb
@@ -1,5 +1,5 @@
 <% content_for :title do %>
-  Is your partner or family member a British Citizen, or settled in the UK?
+  Is your partner or family member a British citizen, or settled in the UK?
 <% end %>
 
 <% options(
