--- a/lib/smart_answer_flows/check-uk-visa/questions/travelling_visiting_partner_family_member.govspeak.erb
+++ b/lib/smart_answer_flows/check-uk-visa/questions/travelling_visiting_partner_family_member.govspeak.erb
@@ -1,5 +1,5 @@
 <% content_for :title do %>
-  Will you be travelling with or visiting your partner or a family member in
+  Will you be travelling with or visiting either your partner or a family member in
   the UK?
 <% end %>
 
