Flatten marriage abroad for South Africa to 2 outcomes

--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/south-africa/_title.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/south-africa/_title.govspeak.erb
@@ -1,3 +1,5 @@
-<% content_for :title do %>
+<% if calculator.partner_is_same_sex? %>
+  Civil partnership in South Africa
+<% else %>
   Marriage in South Africa
 <% end %>
