Amend link to family-permit

--- a/lib/smart_answer_flows/check-uk-visa/outcomes/outcome_partner_family_eea_y.govspeak.erb
+++ b/lib/smart_answer_flows/check-uk-visa/outcomes/outcome_partner_family_eea_y.govspeak.erb
@@ -3,5 +3,5 @@
 <% end %>
 
 <% content_for :body do %>
-  Apply for a [‘family of a settled person’ visa](/join-family-in-uk).
+  Apply for a [family permit](/family-permit).
 <% end %>
