--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/iceland/_ceremony_country.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/iceland/_ceremony_country.govspeak.erb
@@ -14,6 +14,8 @@ You need to be in Iceland for 3 full days before you can give notice. This means
 
 It costs £50 to give notice and £50 for the CNI. You can pay by credit card or in cash in Iceland and payment must be in the local currency.
 
+[Make an appointment at the embassy in Reykjavik to get a CNI](https://www.consular-appointments.service.gov.uk/fco/#!/british-embassy-reykjavik/certificate-of-no-impediment/slot_picker).
+
 You’ll need to bring:
 
 - your passport
