CNI cost changes: Germany-UK-opp sex
Updated cost of CNI from £50 to £35.

--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/greece/uk/_opposite_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/greece/uk/_opposite_sex.govspeak.erb
@@ -14,7 +14,7 @@ If your partner is British, they’ll need to follow the same process to get the
 
 To get a CNI, make an appointment at your [local register office](/register-offices) to give notice of your marriage. 
 
-It costs <%= format_money calculator.consular_fee(:receiving_notice_of_marriage) %> to give notice and <%= format_money calculator.consular_fee(:issuing_cni_or_nulla_osta) %> for the CNI.
+It costs £35 to give notice and get a CNI.
 
 ^Contact your local register office to find out what you need to do if you live in [Scotland](http://www.nrscotland.gov.uk/files/registration/reglist.pdf), [Northern Ireland](http://www.nidirect.gov.uk/index/information-and-services/government-citizens-and-rights/births-and-registration/district-registrars-in-northern-ireland.htm), [Isle of Man](http://www.gov.im/registries/general/civilregistry), [Jersey](http://www.gov.je/pages/contacts.aspx?contactId=71) or [Guernsey](http://www.guernseyroyalcourt.gg/article/1663/Contact-Us).^
 
