CNI cost changes: Finland-user UK
Updated cost of CNI from £50 to £35.

--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/finland/_uk.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/finland/_uk.govspeak.erb
@@ -12,7 +12,7 @@ If your partner is British, they’ll need to follow the same process to get the
 
 ###Get a CNI
 
-To get a CNI, make an appointment at your [local register office](/register-offices) to give notice of your marriage. It costs <%= format_money calculator.consular_fee(:issuing_cni_or_nulla_osta) %>
+To get a CNI, make an appointment at your [local register office](/register-offices) to give notice of your marriage. It costs £35.
 
 Contact your local register office to find out what you need to do if you live in
 [Scotland](http://www.nrscotland.gov.uk/files/registration/reglist.pdf), [Northern
