CNI cost changes: Croatia-opp sex
Updated cost of CNI from £50 to £35.

--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/croatia/_opposite_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/croatia/_opposite_sex.govspeak.erb
@@ -15,9 +15,10 @@ If your partner is British they’ll need to apply for their own CNI and certifi
 You can get a CNI from your local register office in the UK or from the British Embassy in Zagreb.
 
 ###Get a CNI if you’re in the UK
+
 You’ll need to get a CNI if you’re in the UK.
 
-To get a CNI, make an appointment at your [local register office](/register-offices) to give notice of your marriage. A CNI costs <%= format_money calculator.consular_fee(:issuing_cni_or_nulla_osta) %>.
+To get a CNI, make an appointment at your [local register office](/register-offices) to give notice of your marriage. A CNI costs £35.
 
 Contact your local register office to find out what you need to do if you live in [Scotland](https://www.nrscotland.gov.uk/files/registration/reglist.pdf), [Northern Ireland](https://www.nidirect.gov.uk/contacts/district-registrars-northern-ireland), [Isle of Man](https://www.gov.im/categories/births-deaths-and-marriages/), [Jersey](https://www.gov.je/pages/contacts.aspx?contactId=71) or [Guernsey](http://www.guernseyroyalcourt.gg/article/1663/Contact-Us).  
 
