Ethiopia marriage abroad - Ethiopia-partner other
Added in information about marriage validity.

--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/ethiopia/ceremony_country/partner_other/_opposite_sex.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/ethiopia/ceremony_country/partner_other/_opposite_sex.erb
@@ -1,4 +1,14 @@
 Contact the relevant local authorities in Ethiopia to find out about local marriage laws, including what documents you’ll need.
 
-You should [get legal advice](/government/collections/list-of-lawyers) before making any plans.
+^You should [get legal advice](/government/collections/list-of-lawyers) before making any plans.^
 
+##After you get married
+
+Your marriage will be recognised in the UK if:
+
+- you followed the correct process according to the law in Ethiopia
+- it would be [allowed under UK law](https://www.gov.uk/marriages-civil-partnerships)
+
+You won’t need to register your marriage in the UK.
+
+If your partner isn’t a British citizen, they can apply for [British citizenship](https://www.gov.uk/becoming-a-british-citizen/if-your-spouse-is-a-british-citizen) once they’ve lived in the UK for 3 years. 
